--- a/lang/comment-approved-notifier-extended-ro_RO.po
+++ b/lang/comment-approved-notifier-extended-ro_RO.po
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-10-06 15:43+0300\n"
+"PO-Revision-Date: 2015-10-06 15:52+0300\n"
 "Language-Team: \n"
 "X-Generator: Poedit 1.8.4\n"
 "Last-Translator: \n"
@@ -21,7 +21,7 @@ msgstr "Comentariul tau este aprobat!"
 
 #: comment-approved-notifier-extended.php:32
 msgid "Dear "
-msgstr "Buna"
+msgstr "Buna "
 
 #: comment-approved-notifier-extended.php:34
 msgid "Your comment is approved to this post"
@@ -33,7 +33,7 @@ msgstr "Poti vizualiza comentariul facand click pe link-ul de mai jos"
 
 #: comment-approved-notifier-extended.php:44
 msgid "Your Comment"
-msgstr "Comentariul tau"
+msgstr "Comentariul Tau"
 
 #: comment-approved-notifier-extended.php:47
 msgid "Thanks for your comment."
@@ -41,7 +41,7 @@ msgstr "Iti multumim pentru comentariul lasat."
 
 #: comment-approved-notifier-extended.php:51
 msgid "(If you didn't send this comment, we apologize for this e-mail)"
-msgstr "( Daca nu tu ai trimis acest comentariu, ne cerem scuze si il poti ignora acest e-mail )"
+msgstr "(Daca nu tu ai trimis acest comentariu, ne cerem scuze si il poti ignora acest e-mail)"
 
 #. Plugin Name of the plugin/theme
 msgid "Comment Approved Notifier Extended"
