--- a/lang/comment-approved-notifier-extended-tr_TR.po
+++ b/lang/comment-approved-notifier-extended-tr_TR.po
@@ -1,69 +1,87 @@
 msgid ""
 msgstr ""
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Project-Id-Version: Comment Approved Notifier Extended\n"
-"POT-Creation-Date: 2018-04-05 16:47+0300\n"
-"PO-Revision-Date: 2018-04-05 16:48+0300\n"
-"Last-Translator: \n"
+"POT-Creation-Date: 2019-01-29 14:21+0300\n"
+"PO-Revision-Date: 2019-01-29 14:24+0300\n"
 "Language-Team: \n"
-"Language: tr_TR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.2\n"
 "X-Poedit-Basepath: ..\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: comment-approved-notifier-extended.php\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;"
-"_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"Last-Translator: \n"
+"Language: tr_TR\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 
-#: comment-approved-notifier-extended.php:26
-msgid "Your Comment is Approved!"
-msgstr "Yorumunuz Onaylandı!"
+#: comment-approved-notifier-extended.php:80
+msgid "Comment Approved Notifier Settings"
+msgstr "Yorum Onay Bildirgeci Ayarları"
 
-#: comment-approved-notifier-extended.php:34
-msgid "Dear "
-msgstr "Değerli "
+#: comment-approved-notifier-extended.php:81
+msgid "Shortcode List"
+msgstr "Kısa Kod Listesi"
 
-#: comment-approved-notifier-extended.php:36
-msgid "Your comment is approved to this post"
-msgstr "Bu konuya yaptığınız yorum onaylandı"
+#: comment-approved-notifier-extended.php:83
+msgid "You can use this shortcodes in your mail title or mail body."
+msgstr "Mail başlığında ya da mail içeriğinde bu kısa kodları kullanabilirsiniz."
 
-#: comment-approved-notifier-extended.php:41
-msgid "You can see your comment from following address"
-msgstr "Yorumunuzu aşağıdaki adresten görebilirsiniz"
+#: comment-approved-notifier-extended.php:85
+msgid "Comment Author Name:"
+msgstr "Yorum Yazarının Adı:"
 
-#: comment-approved-notifier-extended.php:46
-msgid "Your Comment"
-msgstr "Yorumunuz"
+#: comment-approved-notifier-extended.php:86
+msgid "Commented Post Title:"
+msgstr "Yorum Yapılan Başlık:"
 
-#: comment-approved-notifier-extended.php:49
-msgid "Thanks for your comment."
-msgstr "Yorumunuz için teşekkürler."
+#: comment-approved-notifier-extended.php:87
+msgid "Comment Link:"
+msgstr "Yorum Linki:"
 
-#: comment-approved-notifier-extended.php:53
-msgid "(If you didn't send this comment, we apologize for this e-mail)"
-msgstr "(Eğer bu yorumu siz göndermediyseniz, bu eposta için özür dileriz)"
+#: comment-approved-notifier-extended.php:88
+msgid "Comment:"
+msgstr "Yorum:"
+
+#: comment-approved-notifier-extended.php:89
+msgid "Blog Name:"
+msgstr "Blog Adı:"
+
+#: comment-approved-notifier-extended.php:90
+msgid "Blog URL:"
+msgstr "Blog Adresi:"
+
+#: comment-approved-notifier-extended.php:94
+msgid "Comment Approved Notifier"
+msgstr "Yorum Onay Bildirgeci"
+
+#: comment-approved-notifier-extended.php:95
+msgid "Mail Subject"
+msgstr "Mail Konusu"
+
+#: comment-approved-notifier-extended.php:96
+msgid "Mail Body"
+msgstr "Mail Metni"
+
+#: comment-approved-notifier-extended.php:97
+msgid "Update"
+msgstr "Güncelle"
 
 #. Plugin Name of the plugin/theme
 msgid "Comment Approved Notifier Extended"
-msgstr "Yorum Onay Bildirgeci"
+msgstr "Gelişmiş Yorum Onay Bildirgeci"
 
 #. Plugin URI of the plugin/theme
-msgid ""
-"http://www.ubilisim.com/comment-approved-notifier-extended-wordpress-"
-"plugin/"
-msgstr ""
-"http://www.ubilisim.com/comment-approved-notifier-extended-wordpress-"
-"plugin/"
+msgid "http://www.ubilisim.com/comment-approved-notifier-extended-wordpress-plugin/"
+msgstr "http://www.ubilisim.com/comment-approved-notifier-extended-wordpress-plugin/"
 
 #. Description of the plugin/theme
 msgid "Send notification e-mail to user when comment approved."
-msgstr "Yorumu onaylandığında kullanıcıya bildirim e-postası gönderin."
+msgstr "Kullanıcılarınıza yorumları onaylandığında bildirim maili gönderin."
 
 #. Author of the plugin/theme
 msgid "UfukArt"
@@ -71,51 +89,4 @@ msgstr "UfukArt"
 
 #. Author URI of the plugin/theme
 msgid "http://www.ubilisim.com/"
-msgstr "http://www.ubilisim.com/"
-
-#~ msgid "Soon."
-#~ msgstr "Yakında."
-
-#~ msgid "You will see plugin settings from here, as soon"
-#~ msgstr "Yakında  buradan eklenti ayarlarını görebileceksiniz."
-
-#~ msgid "Thank you for your comment."
-#~ msgstr "Yorumunuz için teşekkürler."
-
-#~ msgid "You can see your comment from this address"
-#~ msgstr "Yorumunuzu bu adresten görebilirsiniz"
-
-#~ msgid "Your can see your comment from this address"
-#~ msgstr "Yorumunuzu bu adresten görebilirsiniz"
-
-#~ msgid "Approved your comment to this topic"
-#~ msgstr "Bu konuya yaptığınız yorum onaylandı"
-
-#~ msgid "Your can see your comment from this address;<br>"
-#~ msgstr "Yorumunuzu bu adresten görebilirsiniz;<br>"
-
-#~ msgid "Your Comment;<br><blockquote>"
-#~ msgstr "Yorumunuz;<br><blockquote>"
-
-#~ msgid "Thank you for your comment.<br>"
-#~ msgstr "Yorumunuz için teşekkürler.<br>"
-
-#~ msgid ""
-#~ "<p>(If you didn't send this comment, we apologize for this e-mail)<p>"
-#~ msgstr ""
-#~ "<p>(Eğer bu yorumu siz göndermediyseniz, bu eposta için özür dileriz)<p>"
-
-#~ msgid "Your can see your comment from this address<br>"
-#~ msgstr "Yorumunuzu bu adresten görebilirsiniz<br>"
-
-#~ msgid "Your Comment;<br>"
-#~ msgstr "Yorumunuz;<br>"
-
-#~ msgid "Your can see your comment from this address; "
-#~ msgstr "Yorumunuzu bu adresten görebilirsiniz; "
-
-#~ msgid "Your Comment;"
-#~ msgstr "Yorumunuz;"
-
-#~ msgid "Hi there!"
-#~ msgstr "Merhaba!"
+msgstr "ttp://www.ubilisim.com/"
